Update files for pathways, publications and exps

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 		<link type="text/css" rel="stylesheet" href="css/graph.css" />
 		
 		<!--  Loads a mock sender and receiver if we're loading outside of SemGen -->
-		<script src="js/mock.js"></script>
+		<script src="dae.js"></script>
 	</head>
 	<body>
 		<div class="addModelButton">+</div>
